--- a/src/app/views/packs/show.njk
+++ b/src/app/views/packs/show.njk
@@ -16,7 +16,7 @@
                 {% endif %}
                 <a href="/packs/{{pack.id}}/edit" class="button edit-button">Editar</a>
 
-                <a href="/packs" class="button">Packs</a>
+                <a href="/packs" class="button">Pacotes</a>
             </div>
         </div>
         <table width="100%">
