--- a/src/app/views/clients/edit.njk
+++ b/src/app/views/clients/edit.njk
@@ -18,7 +18,7 @@
 
             <input type="hidden" name="id" value="{{ client.id }}">
 
-            <button type="submit">Salvar item</button>
+            <button type="submit">Salvar Cliente</button>
         </form>
     </div>
 
