Duplicate kits feature implemented

--- a/src/app/views/kits/show.njk
+++ b/src/app/views/kits/show.njk
@@ -7,6 +7,7 @@
             <div class="buttons">
                 <a href="/kits/{{kit.id}}/createItem" class="button">Novo item</a>
                 <a href="/kits/{{kit.id}}/edit" class="button edit-button">Editar</a>
+                <a href="/kits/{{kit.id}}/duplicate" class="button edit-button">Duplicar</a>
                 <a href="/kits" class="button">Kits</a>
             </div>
         </div>
