--- a/src/app/views/kits/show.njk
+++ b/src/app/views/kits/show.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-    <div class="card kits-index-container">
+    <div class="card index-container">
         <div class="card-header">
             <h2>{{kit.description}}</h2>
             <div class="buttons">
