--- a/src/app/views/items/fields.njk
+++ b/src/app/views/items/fields.njk
@@ -5,7 +5,7 @@
     </div>
 </div>
 
-<div class="item">
+{# <div class="item">
     <div>Largura (mm)</div>
     <div>
         <input type="number" name="width" value="{{ item.width }}">
@@ -17,4 +17,4 @@
     <div>
         <input type="number" name="height" value="{{ item.height }}">
     </div>
-</div>
+</div> #}
