--- a/src/app/views/orders/show.njk
+++ b/src/app/views/orders/show.njk
@@ -21,6 +21,7 @@
                     <button type="submit" class="delete-button">Excluir pedido</button>
                 </form>
                 <a href="/orders" class="button">Pedidos</a>
+                <a href="/orders/{{order.id}}/items"><i class="material-icons button-black">info</i></a>
             </div>
         </div>
         <table width="100%">
