Materials link added to header

--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -53,6 +53,12 @@
                         Clientes
                     </a>
                 </div>
+                <div class="link">
+                    <a href="/materials">
+                        <i class="material-icons">note</i>
+                        Materiais
+                    </a>
+                </div>
             </div>
         </header>
 
